added a new astroscope cluster